--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "rust-solo",
   "displayName": "Rust Solo",
   "description": "An extension to help you code standalone Rust files based on the rust-analyzer extension.",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "publisher": "joyce-peng-github",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Joyce-Peng-GitHub/rust-solo.git"
+  },
+  "license": "GPL-3.0",
   "engines": {
     "vscode": "^1.80.0"
   },
@@ -27,16 +33,16 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "vscode:prepublish": "npm run package",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "package": "esbuild src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node --sourcemap"
   },
   "devDependencies": {
-    "@types/vscode": "^1.80.0",
     "@types/node": "18.x",
-    "typescript": "^5.1.3"
+    "@types/vscode": "^1.80.0",
+    "typescript": "^5.1.3",
+    "esbuild": "^0.20.0"
   }
 }
