--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rust-solo",
   "displayName": "Rust Solo",
   "description": "An extension to help you code standalone Rust files based on the rust-analyzer extension.",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "publisher": "joyce-peng",
   "repository": {
     "type": "git",
@@ -29,6 +29,10 @@
       {
         "command": "rustSolo.removeFile",
         "title": "Rust Solo: Remove current file from cache"
+      },
+      {
+        "command": "rustSolo.clearCache",
+        "title": "Rust Solo: Clear entire LRU cache"
       }
     ],
     "configuration": {
