--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rust-solo",
   "displayName": "Rust Solo",
   "description": "An extension to help you code standalone Rust files based on the rust-analyzer extension.",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "publisher": "joyce-peng",
   "repository": {
     "type": "git",
@@ -33,6 +33,14 @@
       {
         "command": "rustSolo.clearCache",
         "title": "Rust Solo: Clear entire LRU cache"
+      },
+      {
+        "command": "rustSolo.runFile",
+        "title": "Rust Solo: Run Standalone File"
+      },
+      {
+        "command": "rustSolo.debugFile",
+        "title": "Rust Solo: Debug Standalone File"
       }
     ],
     "configuration": {
